--- a/src/main/resources/view/MainForm.fxml
+++ b/src/main/resources/view/MainForm.fxml
@@ -8,7 +8,6 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-
 <AnchorPane prefHeight="593.0" prefWidth="678.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.sajithdilshan.dep8.Controller.MainFormController">
    <children>
       <TextField fx:id="txtId" layoutX="276.0" layoutY="113.0" prefHeight="26.0" prefWidth="284.0" />
@@ -29,7 +28,7 @@
         </columns>
       </TableView>
       <Label layoutX="301.0" layoutY="49.0" text="Customer Details Form" />
-      <Button layoutX="576.0" layoutY="257.0" mnemonicParsing="false" onAction="#btnBrowse_OnAction" text="...">
+      <Button fx:id="btnBrowse" layoutX="576.0" layoutY="257.0" mnemonicParsing="false" onAction="#btnBrowse_OnAction" text="...">
          <font>
             <Font name="System Bold" size="13.0" />
          </font>
