--- a/src/main/resources/view/MainForm.fxml
+++ b/src/main/resources/view/MainForm.fxml
@@ -19,12 +19,13 @@
       <Label layoutX="158.0" layoutY="219.0" text="Address" />
       <Label layoutX="164.0" layoutY="262.0" text="Image" />
       <Button fx:id="btnSave" layoutX="276.0" layoutY="310.0" mnemonicParsing="false" onAction="#btnSave_OnAction" text="Save" />
-      <TableView fx:id="tblCustomers" layoutX="58.0" layoutY="357.0" prefHeight="220.0" prefWidth="580.0">
+      <TableView fx:id="tblCustomers" layoutX="17.0" layoutY="357.0" prefHeight="220.0" prefWidth="641.0">
         <columns>
-          <TableColumn prefWidth="93.0" text="Id" />
-          <TableColumn prefWidth="153.0" text="Name" />
-            <TableColumn prefWidth="183.0" text="Address" />
-            <TableColumn prefWidth="150.0" text="Image" />
+          <TableColumn prefWidth="84.0" text="Id" />
+          <TableColumn prefWidth="120.0" text="Name" />
+            <TableColumn prefWidth="176.0" text="Address" />
+            <TableColumn prefWidth="147.0" text="Image" />
+            <TableColumn prefWidth="127.0" text="Button" />
         </columns>
       </TableView>
       <Label layoutX="301.0" layoutY="49.0" text="Customer Details Form" />
