--- a/src/main/resources/view/MainForm.fxml
+++ b/src/main/resources/view/MainForm.fxml
@@ -8,17 +8,32 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="593.0" prefWidth="678.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.sajithdilshan.dep8.Controller.MainFormController">
+<AnchorPane prefHeight="593.0" prefWidth="678.0" style="-fx-background-color: #7babd1;" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="me.sajithdilshan.dep8.Controller.MainFormController">
    <children>
-      <TextField fx:id="txtId" layoutX="276.0" layoutY="113.0" prefHeight="26.0" prefWidth="284.0" />
-      <TextField fx:id="txtName" layoutX="276.0" layoutY="162.0" prefHeight="26.0" prefWidth="284.0" />
-      <TextField fx:id="txtAddress" layoutX="276.0" layoutY="214.0" prefHeight="26.0" prefWidth="284.0" />
-      <TextField fx:id="txtImage" layoutX="276.0" layoutY="257.0" prefHeight="26.0" prefWidth="284.0" />
-      <Label layoutX="158.0" layoutY="118.0" text="Id" />
-      <Label layoutX="158.0" layoutY="167.0" text="Name" />
-      <Label layoutX="158.0" layoutY="219.0" text="Address" />
-      <Label layoutX="164.0" layoutY="262.0" text="Image" />
-      <Button fx:id="btnSave" layoutX="276.0" layoutY="310.0" mnemonicParsing="false" onAction="#btnSave_OnAction" text="Save" />
+      <TextField fx:id="txtId" layoutX="165.0" layoutY="113.0" prefHeight="26.0" prefWidth="395.0" promptText="E.g : C001" />
+      <TextField fx:id="txtName" layoutX="165.0" layoutY="162.0" prefHeight="26.0" prefWidth="395.0" promptText="Enter Nmae" />
+      <TextField fx:id="txtAddress" layoutX="165.0" layoutY="214.0" prefHeight="26.0" prefWidth="395.0" promptText="Enter Address" />
+      <TextField fx:id="txtImage" editable="false" layoutX="165.0" layoutY="257.0" prefHeight="26.0" prefWidth="395.0" promptText="Add Image URL" />
+      <Label layoutX="130.0" layoutY="116.0" text="Id">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></Label>
+      <Label layoutX="91.0" layoutY="165.0" text="Name">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></Label>
+      <Label layoutX="67.0" layoutY="217.0" text="Address">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></Label>
+      <Label layoutX="89.0" layoutY="260.0" text="Image">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></Label>
+      <Button fx:id="btnSave" layoutX="165.0" layoutY="297.0" mnemonicParsing="false" onAction="#btnSave_OnAction" prefHeight="26.0" prefWidth="83.0" style="-fx-background-color: #757778;" text="Save" textFill="#f5eeee">
+         <font>
+            <Font size="15.0" />
+         </font></Button>
       <TableView fx:id="tblCustomers" layoutX="17.0" layoutY="357.0" prefHeight="220.0" prefWidth="641.0">
         <columns>
           <TableColumn prefWidth="84.0" text="Id" />
@@ -28,10 +43,13 @@
             <TableColumn prefWidth="127.0" text="Button" />
         </columns>
       </TableView>
-      <Label layoutX="301.0" layoutY="49.0" text="Customer Details Form" />
-      <Button fx:id="btnBrowse" layoutX="576.0" layoutY="257.0" mnemonicParsing="false" onAction="#btnBrowse_OnAction" text="...">
+      <Label layoutX="197.0" layoutY="41.0" text="Customer Details Form">
          <font>
-            <Font name="System Bold" size="13.0" />
+            <Font name="System Bold" size="28.0" />
+         </font></Label>
+      <Button fx:id="btnBrowse" layoutX="576.0" layoutY="257.0" mnemonicParsing="false" onAction="#btnBrowse_OnAction" prefHeight="0.0" prefWidth="44.0" style="-fx-background-color: #757778;" text="..." textFill="#fffefe">
+         <font>
+            <Font name="System Bold" size="14.0" />
          </font>
       </Button>
    </children>
